--- a/Agents/simple_randomized_agent.ipynb
+++ b/Agents/simple_randomized_agent.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'north'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# define percepts (current location is NW corner and it is dirty)\n",
     "bumpers = {\"north\" : True, \"east\" : False, \"south\" : False, \"west\" : True}\n",
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +133,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0 - action: suck\n",
+      "step 1 - action: suck\n",
+      "step 2 - action: east\n",
+      "step 3 - action: west\n",
+      "step 4 - action: east\n",
+      "step 5 - action: suck\n",
+      "step 6 - action: south\n",
+      "step 7 - action: west\n",
+      "step 8 - action: north\n",
+      "step 9 - action: west\n",
+      "step 10 - action: west\n",
+      "step 11 - action: east\n",
+      "step 12 - action: west\n",
+      "step 13 - action: east\n",
+      "step 14 - action: south\n",
+      "step 15 - action: north\n",
+      "step 16 - action: west\n",
+      "step 17 - action: north\n",
+      "step 18 - action: south\n",
+      "step 19 - action: north\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "simple_environment(simple_randomized_agent, max_steps = 20)"
    ]
@@ -157,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "def environment(agent, n = 5, p = 0.2, x = random.choice(a=range(5)),\n",
-    "                y = random.choice(a=range(5)), max_steps = 1000000, verbose = True):\n",
+    "                y = random.choice(a=range(5)), max_steps = 50000, verbose = True):\n",
     "    \n",
     "    ground = random.choice(a=[False, True], size=(n, n), p=[1-p, p])\n",
     "    \n",
@@ -234,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,12 +321,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pdb \n",
-    "\n",
     "class ModelReflexAgent:\n",
     "    def __init__(self, x, y, n):\n",
     "        self.x = x\n",
@@ -296,9 +342,7 @@
     "        self.corner_x = (0 if x < (n / 2.0) else n - 1)\n",
     "        self.corner_y = (0 if x < (n / 2.0) else n - 1)\n",
     "        \n",
-    "    def act(self, bumpers, dirty):\n",
-    "        self.visited[self.x][self.y] = True\n",
-    "        \n",
+    "    def act(self, bumpers, dirty):        \n",
     "        if dirty:\n",
     "            return 'suck'\n",
     "        \n",
@@ -318,62 +362,40 @@
     "            else:\n",
     "                self.navigate_to_corner = False\n",
     "                \n",
-    "        count = 0\n",
+    "        self.visited[self.x][self.y] = True\n",
+    "        \n",
     "        while not self.check(self.forward, bumpers):\n",
     "            self.turn_right()\n",
-    "            count += 1\n",
-    "            if count > 10:\n",
-    "                pdb.set_trace()\n",
-    "            \n",
-    "        count = 0\n",
-    "        while self.check(self.right, bumpers):\n",
-    "            self.turn_right()\n",
-    "            count += 1\n",
-    "            if count > 10:\n",
-    "                pdb.set_trace()\n",
-    "        \n",
+    "                            \n",
     "        return self.advance()\n",
-    "        \n",
-    "        \n",
-    "    def turn_right(self):\n",
-    "        temp = self.forward\n",
-    "        self.forward = self.right\n",
-    "        self.right   = self.back\n",
-    "        self.back    = self.left\n",
-    "        self.left    = temp\n",
-    "        \n",
-    "    def turn_left(self):\n",
-    "        temp = self.forward\n",
-    "        self.forward = self.left\n",
-    "        self.left    = self.back\n",
-    "        self.back    = self.right\n",
-    "        self.right   = temp\n",
     "        \n",
     "    def check(self, direction, bumpers):\n",
     "        if bumpers[direction]:\n",
     "            return False\n",
     "        elif direction == 'north':\n",
-    "            return (not self.visited[self.x - 1][self.y])\n",
+    "            return not self.visited[self.x - 1][self.y]\n",
     "        elif direction == 'south':\n",
-    "            return (not self.visited[self.x + 1][self.y])\n",
+    "            return not self.visited[self.x + 1][self.y]\n",
     "        elif direction == 'east':\n",
-    "            return (not self.visited[self.x][self.y + 1])\n",
+    "            return not self.visited[self.x][self.y + 1]\n",
     "        elif direction == 'west':\n",
-    "            return (not self.visited[self.x][self.y - 1])\n",
-    "        else:\n",
-    "            return False\n",
+    "            return not self.visited[self.x][self.y - 1]\n",
+    "        \n",
+    "                \n",
+    "    def turn_right(self):\n",
+    "        self.forward, self.right, self.back, self.left = self.right, self.back, self.left, self.forward\n",
     "        \n",
     "    def advance(self):\n",
     "        if self.forward == 'north':\n",
-    "            self.x -= 1\n",
+    "            self.x = self.x - 1\n",
     "        elif self.forward == 'south':\n",
-    "            self.x += 1\n",
+    "            self.x = self.x + 1\n",
     "        elif self.forward == 'east':\n",
-    "            self.y += 1\n",
+    "            self.y = self.y + 1\n",
     "        elif self.forward == 'west':\n",
-    "            self.y -= 1\n",
-    "            \n",
-    "        return self.forward"
+    "            self.y = self.y - 1\n",
+    "        return self.forward\n",
+    "        "
    ]
   },
   {
@@ -390,19 +412,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "avgs = {\n",
     "    'rand': {},\n",
     "    'rflx': {},\n",
     "    'mbra': {}\n",
     "}\n",
     "\n",
-    "trials = 1\n",
+    "trials = 100\n",
     "sizes = [5, 10, 100]\n",
     "\n",
     "for n in sizes:\n",
@@ -415,27 +439,45 @@
     "    \n",
     "\n",
     "    for i in range(trials):\n",
-    "        print(i)\n",
     "        x = random.choice(a=range(n))\n",
     "        y = random.choice(a=range(n))\n",
     "        model_reflex_agent = ModelReflexAgent(x, y, n).act\n",
     "        \n",
-    "        avgs['rand'][n]['tot'] += environment(simple_reflex_agent,     x = x, y = y, n = n, verbose = True)\n",
-    "        avgs['rflx'][n]['tot'] += environment(simple_randomized_agent, x = x, y = y, n = n, verbose = True)\n",
-    "        avgs['mbra'][n]['tot'] += environment(model_reflex_agent,      x = x, y = y, n = n, verbose = True)\n",
+    "        avgs['rand'][n]['tot'] += environment(simple_randomized_agent,     x = x, y = y, n = n, verbose = False)\n",
+    "        avgs['rflx'][n]['tot'] += environment(simple_reflex_agent, x = x, y = y, n = n, verbose = False)\n",
+    "        avgs['mbra'][n]['tot'] += environment(model_reflex_agent,      x = x, y = y, n = n, verbose = False)\n",
     "        \n",
     "    avgs['rand'][n]['avg'] = avgs['rand'][n]['tot'] / trials\n",
     "    avgs['rflx'][n]['avg'] = avgs['rflx'][n]['tot'] / trials\n",
-    "    avgs['mbra'][n]['avg'] = avgs['mbra'][n]['tot'] / trials\n",
-    "    \n",
-    "print(avgs)"
+    "    avgs['mbra'][n]['avg'] = avgs['mbra'][n]['tot'] / trials"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rand': {5: {'tot': 44275, 'avg': 442.75},\n",
+       "  10: {'tot': 301853, 'avg': 3018.53},\n",
+       "  100: {'tot': 5000000, 'avg': 50000.0}},\n",
+       " 'rflx': {5: {'tot': 9977, 'avg': 99.77},\n",
+       "  10: {'tot': 96802, 'avg': 968.02},\n",
+       "  100: {'tot': 5000000, 'avg': 50000.0}},\n",
+       " 'mbra': {5: {'tot': 2696, 'avg': 26.96},\n",
+       "  10: {'tot': 12250, 'avg': 122.5},\n",
+       "  100: {'tot': 1207404, 'avg': 12074.04}}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avgs"
    ]
@@ -455,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
